--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.16",
     "@react-icons/all-files": "^4.1.0",
+    "axios": "^1.6.8",
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.9.0",
     "react": "^18.2.0",
