--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "flowbite-react": "^0.9.0",
     "react": "^18.2.0",
     "react-icons": "^5.0.1",
-    "react-router-dom": "^6.23.0"
+    "react-router-dom": "^6.23.0",
+    "react-spinners": "^0.13.8"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
